let aux nav overlap over search suggestions (bug 694567)

--- a/media/css/impala/suggestions.less
+++ b/media/css/impala/suggestions.less
@@ -11,7 +11,7 @@
     bottom: -5px;
     left: -10px;
     visibility: hidden;
-    z-index: 1000;
+    z-index: 40;
     &.visible {
         opacity: 1;
         bottom: -15px;
